home page section overlaping issue fixed

--- a/css/main.css
+++ b/css/main.css
@@ -194,6 +194,7 @@ a{
 header{
     position: relative;
     color: white;
+    height: 100vh;
 }
 nav{
     height: 60px;
@@ -236,6 +237,7 @@ header .bg-three{
 }
 header .container{
     padding: 10rem 0;
+    
 }
 header .container h1{
     padding: 1.75rem 0 1rem;
